--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 I  an enna thank you
   
-<a href=htte://www.yahoo.com  雅虎</a><br>
-<a href=htte://www.youtube.com  youtube.com</a><br>
+<a href=htte://www.yahoo.com> 雅虎</a><br>
+<a href=htte://www.youtube.com> youtube.com</a><br>
